@@ -5,6 +5,8 @@ version 8.0.2
 * fix an issue on harvester file not defined (python 3 compat)
 * add a simple install for setoolkit (setup.py)
 * teensy remove old path generation location /usr/share/set to /usr/share/setoolkit
+* fixed raw_input issue for python3
+* changed env variable to python3
 
 ~~~~~~~~~~~~~~~~
 version 8.0.1
